<resources>
    <string name="app_name">DeveloperReference</string>
    <string name="title_activity_search_web">SearchWebActivity</string>
    <!-- Menu -->
    <string name="searchAll">Search All Resources</string>
    <string name="searchOfficial">Search Official Documentation</string>
    <string name="searchForum">Search Q and A/Forums</string>
    <string name="searchGuide">Search For a Guide/Tutorial</string>
    <string name="searchCodeExamples">Search for Code Samples</string>
    <string name="compare">Compare Differences Between Languages</string>
    <string name="allLanguages">View a List of All Languages</string>
    <!-- SearchWeb -->
    <string name="customQuery">Enter a Custom Search Query:</string>
    <string name="choosePrebuiltQuery">Choose a Topic:</string>
    <string name="orChoosePrebuiltQuery">Or Choose a Topic:</string>
    <string name="customGo">Go (custom)</string>
    <string name="prebuiltGo">Go (selection)</string>
    <!-- Settings -->
    <string name="forceRefresh">Refresh all data in db</string>
    <string name="selectDefaultLang">Select Default Language(s)</string>
    <string name="useBrowser">Open links in default browser</string>
    <!-- Common -->
    <string name="SelectLang">Select one or more languages</string>
    <string name="Go">Go</string>
    <string name="placeholder">Placeholder</string>
</resources>
