<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/menuLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.rrc.wilson.developerreference.MainMenuActivity">

    <TextView
        android:id="@+id/searchAll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/searchAll" />
    <TextView
        android:id="@+id/searchOfficial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/searchOfficial" />
    <TextView
        android:id="@+id/searchForum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/searchForum" />
    <TextView
        android:id="@+id/searchGuide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/searchGuide" />
    <TextView
        android:id="@+id/searchCodeExamples"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/searchCodeExamples" />
    <TextView
        android:id="@+id/compare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/compare" />
</LinearLayout>
